--- a/style.css
+++ b/style.css
@@ -88,3 +88,20 @@ body{
   width: 40px;
   margin-right: 10px;
 }
+
+.humidity, .wind{
+  font-size: 28px;
+  margin-top: -6px;
+}
+
+.weather{
+  display: none ;
+}
+
+.error{
+  text-align: left;
+  margin-left: 10px;
+  margin-top: 10px;
+  font-size: 14px;
+  display: none;
+}
