--- a/style.css
+++ b/style.css
@@ -101,7 +101,8 @@ body{
 .error{
   text-align: left;
   margin-left: 10px;
-  margin-top: 10px;
   font-size: 14px;
+  margin-top: 10px;
   display: none;
+  color: red;
 }
